--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,14 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: CollectionBuilder-GH 
+title: Bram Stoker's Dracula
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: a template for creating simple digital exhibits
+tagline: exploring one of the most famous vampire stories ever told
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-GH is a template for creating small digital collection exhibits on GitHub Pages designed for teaching digital library skills"
+description: "This collection features a variety of editions, adaptations, and translations of Bram Stoker's famous vampire story, Dracula, as well as biographies of Stoker himself."
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
-author: CollectionBuilder
+author: Natasha D'Amours
 
 ##########
 # COLLECTION SETTINGS
